fixed z-index from mail-response (it was behind header)

--- a/website/termin.scss
+++ b/website/termin.scss
@@ -199,7 +199,7 @@ input[type=date]:invalid {
   font-weight: bold;
   width: max-content;
   transition: 0.3s;
-  z-index: 10;
+  z-index: 30;
 }
 
 #erfolgreich {
